k8s/nird/metatrack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metatrack-api
  namespace: elixir-uit-ns11105k
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metatrack-api
  template:
    metadata:
      labels:
        app: metatrack-api
    spec:
      containers:
        - name: api
          image: ghcr.io/elixir-no/metatrack-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 1000m
              memory: 2Gi
            limits:
              cpu: 2000m
              memory: 4Gi
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 5
