k8s/nird/metatrack/neo4j-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-metatrack-to-neo4j
  namespace: elixir-uit-ns11105k
spec:
  podSelector:
    matchLabels:
      app: neo4j
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: metatrack-api
      ports:
        - protocol: TCP
          port: 7687
        - protocol: TCP
          port: 7474
